--- a/AJAX/style/style.css
+++ b/AJAX/style/style.css
@@ -38,13 +38,20 @@ body {
   opacity: 1.0 !important;
 }
 .background_home {
-  background-image: url(http://localhost/leerjaar2/portfolio/AJAX/bg.jpg);
+  background-image: url(/leerjaar2/portfolio/AJAX/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 .center-text {
   text-align: center;
+}
+.footer {
+    margin-top: 2em;
+    font-size: 0.8em;
+}
+.arrow-size {
+    width: 3em;
 }
 @media only screen and (min-width: 768px) {
     /* For desktop: */
