--- a/AJAX/style/style.css
+++ b/AJAX/style/style.css
@@ -50,7 +50,7 @@ h2 {
   opacity: 1.0 !important;
 }
 .background_home {
-  background-image: url(/leerjaar2/portfolio/AJAX/test.png);
+  background-image: url(/leerjaar2/portfolio/AJAX/gru.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
