--- a/AJAX/style/grid.css
+++ b/AJAX/style/grid.css
@@ -93,7 +93,7 @@ html {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .footer {
-    background-color: #0099cc;
+    background-color: black;
     color: #ffffff;
     text-align: center;
     font-size: 12px;
