changed media query

--- a/AJAX/style/style.css
+++ b/AJAX/style/style.css
@@ -340,6 +340,6 @@ textarea {
     font-size: 0.9em;
   }
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (max-width: 767px) {
   /* Tablet */
 }
