--- a/AJAX/style/style.css
+++ b/AJAX/style/style.css
@@ -57,6 +57,11 @@ button {
   color: white;
   font-size: 1.5em;
 }
+.noSpace {
+  /*Contains no margin and no padding*/
+  margin-top: 0;
+  padding: 0;
+}
 .project {
   text-align: center;
 }
