--- a/AJAX/style/style.css
+++ b/AJAX/style/style.css
@@ -23,7 +23,7 @@ h1 {
   height: 7em;
 }
 h2 {
-  font-size: 2em;
+  font-size: 1.5em;
 }
 button {
   background-color: lightgray;
@@ -81,7 +81,7 @@ button {
   opacity: 1.0 !important;
 }
 .background_home {
-  background-image: url(/leerjaar2/portfolio/AJAX/file/background.jpg);
+  background-image: url(/file/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
